# media-downloader

./: .gitignore  LICENSE  README.md  gen-ico.cjs  index.html  package-lock.json  package.json  tailwind.config.js
.kiro/specs/filename-anonymization/: design.md  requirements.md  tasks.md
src/: App.css  App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DownloadSection.module.css  DownloadSection.tsx  EditSection.tsx  FileExplorer.tsx  HelpText.tsx  NotificationToast.tsx  Portal.tsx  SettingsSection.tsx  TitleBar.tsx  Tooltip.tsx  index.ts
src/hooks/: useNotifications.ts
src/locales/en/: translation.json
src/locales/pl/: translation.json
src/types/: index.ts  quality.ts
src/utils/: index.ts  notificationManager.ts  qualityConfig.ts  qualityUtils.ts
