[package]
name = "tauri-app"
version = "0.1.0"
description = "Desktop media downloader and editor built with Tauri"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.86"
lazy_static = "1.5.0"
uuid = { version = "1.0", features = ["v4"] }
warp = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0"
urlencoding = "2.1"
http-range = "0.1.5"
base64 = "0.21"
reqwest = { version = "0.12", features = ["json"] }
zip = "0.6"
futures-util = "0.3"
fastrand = "2.0"
